--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <hr class="divider">
       <div class="card__footer">
-        <img class="avatar" src="/images/avatar-image-business-card.png" alt="avatar">
+        <img class="avatar" src="./images/avatar-image-business-card.png" alt="avatar">
 
         <div class="card__footer-author">
           <h3 class="author-name">Amy Burgess</h3>
